# CLLM

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
data/input/: function_calling_tests.json
src/: __main__.py  callmemaybe.py  encoder.py  function.py  llm.py
