[project]
name = "42-call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[tool.mypy]
exclude = [
    "llm_sdk/"
]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
]
